# thevault

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/compression/: compression.rs
src/encryption/: encryption.rs  mod.rs
src/file/: file.rs
